Fix divider alignment and content padding for Work section

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -3,9 +3,6 @@
   min-height: 100vh;
   padding: 0rem 2rem 10rem;
   background: #f5f5f5;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
 }
 
 .about-inner {
@@ -52,18 +49,8 @@
 
 .character {
   position: relative;
-  /* position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: auto; */
   width: 150px;
   height: 150px;
-
-  /* z-index: 50;
-  will-change: transform;
-  pointer-events: none;
-  transition: z-index 0.2s ease; */
 }
 
 .character.floating {
@@ -76,7 +63,4 @@
   left: 0;
   width: 100%;
   height: 100%;
-  /* width: 300px;
-  max-width: 100%;
-  height: auto; */
 }
